# cplustorch

./: CMakeLists.txt  LICENSE  README.md  main.cpp  test.cpp
aten/include/: tensor.hpp  tensor_iterator.hpp
aten/include/native/: ops.hpp
aten/src/: tentor.cpp  tentor_iterator.cpp
aten/src/native/: ops.cpp
include/: autograd.hpp  functional.hpp  nn.hpp  optim.hpp  tensor.hpp
include/criterion/: cross_entropy_loss.hpp  mse_loss.hpp
include/nn/: linear.hpp
include/optimizer/: adam.hpp
src/: functional.cpp  tensor.cpp
src/criterion/: cross_entropy_loss.cpp  mse_loss.cpp
src/nn/: functional.cpp  linear.cpp
src/optimizer/: adam.cpp
torch/include/autograd/: engine.hpp
torch/include/nn/: init.hpp  module.hpp
torch/include/nn/modules/: linear.hpp  mse_loss.hpp
torch/include/optim/: adam.hpp  optimizer.hpp
torch/src/autograd/: engine.cpp
torch/src/nn/: init.cpp  module.cpp
torch/src/nn/modules/: linear.cpp  mse_loss.cpp
torch/src/optim/: adam.cpp
